basic-spring-boot-helm-jenkins/pipeline-chart/templates/jenkins_jnlp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-persistent
    template: jenkins-persistent-template
  name: jenkins-jnlp
spec:
  ports:
  - name: agent
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    name: jenkins
  sessionAffinity: None
  type: ClusterIP
