basic-spring-boot-helm-jenkins/pipeline-chart/templates/jenkins_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins
    weight: 100
  wildcardPolicy: None
